fixed layout issue

--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -1,6 +1,6 @@
 .home-inner-width {
   max-width: 1230px;
-  width: 1230px;
+  width: 100%;
   margin: 0 auto;
   padding: 0 39px;
 }
@@ -10,6 +10,10 @@
   font-size: 16px;
   line-height: 22px;
   color: #000;
+}
+
+.homepage-container > *{
+  min-width: 900px;
 }
 
 button:focus,
